# PyWebCLI

./: .gitignore  README.md
api/: .env.example  .gitignore  inspect_strands.py  main.py  pyproject.toml
ui/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css  main.tsx
ui/src/components/: Terminal.tsx
ui/src/utils/: highlight.ts
